<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView android:id="@+id/text1"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/cplabel"
            />
        <TextView android:id="@+id/cp_value"
            android:paddingTop="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            android:text="88"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

        <TextView android:id="@+id/text2"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/splabel"
            />
        <TextView android:id="@+id/sp_value"
            android:paddingTop="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            android:text="88"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

        <TextView android:id="@+id/text3"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/eplabel"
            />
        <TextView android:id="@+id/ep_value"
            android:paddingTop="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            android:text="88"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

        <TextView android:id="@+id/text4"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/gplabel"
            />
        <TextView android:id="@+id/gp_value"
            android:paddingTop="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            android:text="88"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

        <TextView android:id="@+id/text5"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/pplabel"
            />
        <TextView android:id="@+id/pp_value"
            android:paddingTop="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            android:text="88"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/text11"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/cplabel"
            />
        <EditText android:id="@+id/new_cp"
            android:paddingTop="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            android:text="0"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="numberDecimal"
            />

        <TextView android:id="@+id/text12"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/splabel"
            />
        <EditText android:id="@+id/new_sp"
            android:paddingTop="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            android:text="0"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="numberDecimal"
            />

        <TextView android:id="@+id/text13"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/eplabel"
            />
        <EditText android:id="@+id/new_ep"
            android:paddingTop="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            android:text="0"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="numberDecimal"
            />

        <TextView android:id="@+id/text14"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/gplabel"
            />
        <EditText android:id="@+id/new_gp"
            android:paddingTop="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            android:text="0"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="numberDecimal"
            />

        <TextView android:id="@+id/text15"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/pplabel"
            />
        <EditText android:id="@+id/new_pp"
            android:paddingTop="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            android:text="0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="numberDecimal"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addcash"
        android:layout_marginLeft="16dp"
        android:layout_gravity="bottom"
        android:onClick="addcash"
        android:enabled="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtractcash"
        android:layout_marginLeft="16dp"
        android:layout_gravity="bottom"
        android:onClick="subtractcash"
        android:enabled="true"
        />

</LinearLayout>